# coriander-v42l

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.in  coriander.glade  coriander.gladep
po/: coriander.pot
src/: Makefile.am  Makefile.in  SDLEvent.c  SDLEvent.h  build_frames.c  build_frames.h  build_menus.c  build_menus.h  build_ranges.c  build_ranges.h  build_windows.c  build_windows.h  callbacks.c  callbacks.h  camera.c  camera.h  conversions.c  conversions.h  coriander.h  definitions.c  definitions.h  error.c  error.h  interface.c  interface.h  main.c  preferences.c  preferences.h  subtitles.c  subtitles.h  thread_base.c  thread_base.h  thread_display.c  thread_display.h  thread_ftp.c  thread_ftp.h  thread_iso.c  thread_iso.h  thread_save.c  thread_save.h  (+15 more)
